--- a/templates/dashboard/ambientes.html
+++ b/templates/dashboard/ambientes.html
@@ -41,11 +41,11 @@
                 <table id="tabla-ambiente" class="table table-striped" style="width:100%">
                     <thead>
                         <tr>
-                            <th>Nombre</th>
-                            <th>Aforo</th>
-                            <th>Estado</th>
-                            <th>Edificio</th>
-                            <th>Opciones</th>
+                            <th style="width: 10%; text-align: center;">Nombre</th>
+                            <th style="width: 3%; text-align: center;">Aforo</th>
+                            <th style="width: 3%; text-align: center;">Estado</th>
+                            <th style="width: 10%; text-align: center;">Edificio</th>
+                            <th style="width: 10%; text-align: center;">Opciones</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -183,7 +183,7 @@
             "stateSave": true,
             "columns": [
                 { "data": "nombre" },
-                { "data": "aforo" },
+                { "data": "aforo" ,"className": 'dt-body-center' },
                 { "data": "estado" },
                 {
                     "data": "idedificio",
@@ -202,6 +202,9 @@
                     }
                 }
             ],
+            "columnDefs": [
+            { targets: '_all', className: 'dt-center' }
+      ],
             "language": {
                 "url": "//cdn.datatables.net/plug-ins/1.13.7/i18n/es-ES.json"
             }
