--- a/templates/dashboard/cursos.html
+++ b/templates/dashboard/cursos.html
@@ -15,20 +15,20 @@
         </div>
         <div class="card-body">
             <div class="table-responsive">
-                <table id="tabla-curso" class="table table-striped table-bordered tabla-cursos" style="width:100%">
+                <table id="tabla-curso" class="table table-striped table-bordered tabla-cursos" style="width:100% ">
                     <thead>
                         <tr>
-                            <th>Nombre</th>
-                            <th>Código</th>
-                            <th>Ciclo</th>
-                            <th>Tipo Curso</th>
-                            <th>Estado</th>
-                            <th>Plan de Estudio</th>
-                            <th>Opciones</th>
+                            <th style="width:30%; text-align:left;">Nombre</th>
+                            <th style="width:30%; text-align:left;">Código</th>
+                            <th style="width:10%; text-align:left;">Ciclo</th>
+                            <th style="width:30%; text-align:left;">Tipo Curso</th>
+                            <th style="width:30%; text-align:left;">Estado</th>
+                            <th style="width:30%; text-align:left;">Plan de Estudio</th>
+                            <th style="width:30%; text-align:left;">Opciones</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <!-- Los datos de los cursos se cargarán dinámicamente aquí -->
+                        
                     </tbody>
                 </table>
             </div>
@@ -36,7 +36,6 @@
                 <a href="#" id="btn_agregar_curso" class="btn btn-success">Agregar Nuevo Curso</a>
             </div>
         </div>
-        
     </div>
 </div>
 
@@ -198,10 +197,9 @@
                     "data": null,
                     "render": function (data, type, row) {
                         return `
-                            <button class="btn btn-primary btn-sm btnVer" data-id="${row.idcurso}">
-                                <i class="fas fa-eye"></i> Ver </button>
-                            <button class="btn btn-warning btn-sm btnModificar" data-id="${row.idcurso}">Modificar</button>
-                            <button class="btn btn-danger btn-sm btnEliminar" data-id="${row.idcurso}" data-nombre="${row.nombre}">Eliminar</button>
+                            <button class="btn btn-primary btn-sm btnVer" data-id="${row.idcurso}"><i class="fas fa-eye"></i></button>
+                            <button class="btn btn-warning btn-sm btnModificar" data-id="${row.idcurso}"><i class="fas fa-cog"></i></button>
+                            <button class="btn btn-danger btn-sm btnEliminar" data-id="${row.idcurso}" data-nombre="${row.nombre}"><i class="fas fa-times"></i></button>
                         `;
                     }
                 }
