cambio de iconos en la barra del dashboard a

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -59,6 +59,12 @@
     background-color: #f8f9fa;
     z-index: 1;
 }
+[data-image]{
+    margin-right: 10px;
+    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(43deg) brightness(105%) contrast(101%);
+    width: 20px;
+    height: 20px;
+}
 
 @media (max-width: 767.98px) {
     .tabla-cursos th, .tabla-cursos td {
