orientacion columnas de tabla

--- a/static/dashboard/css/app.css
+++ b/static/dashboard/css/app.css
@@ -354,7 +354,7 @@ svg {
 table {
     border-collapse: collapse;
     caption-side: bottom;
-    text-align: center
+    text-align: left
 
 }
 .centered-cell {
