--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -105,8 +105,12 @@
 						</li>
 
 						<li class="sidebar-item">
-							<a class="sidebar-link" href="{{url_for('ambientes')}}">
+							<!-- <a class="sidebar-link" href="{{url_for('ambientes')}}">
 								<img data-image="" src="https://img.icons8.com/ios/50/000000/classroom.png" alt="classroom"/> <span
+									class="align-middle">Ambientes</span>
+							</a> -->
+							<a class="sidebar-link" href="{{url_for('ambientes')}}">
+								<img data-image="" src="https://img.icons8.com/glyph-neue/64/000000/school.png" alt="school"/> <span
 									class="align-middle">Ambientes</span>
 							</a>
 						</li>
