--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -146,6 +146,13 @@
 									class="align-middle">Docentes</span>
 							</a>
 						</li>
+						
+						<li class="sidebar-item">
+							<a class="sidebar-link" href="{{url_for('docentesxcursos')}}">
+								<i class="align-middle" data-feather="grid"></i> <span
+									class="align-middle">Docentes por curso</span>
+							</a>
+						</li>
 
 						<li class="sidebar-item">
 							<a class="sidebar-link" href="{{url_for('horarios')}}">
