diseño de ambientes y grupos

--- a/templates/dashboard/ambientes.html
+++ b/templates/dashboard/ambientes.html
@@ -186,7 +186,7 @@
                 { "data": "aforo" ,"className": 'dt-body-center' },
                 { "data": "estado" },
                 {
-                    "data": "idedificio",
+                    "data": "idedificio", "className":'dt-body-left',
                     "render": function (data, type, row) {
                         return edificios[data] || data;
                     }
