--- a/templates/dashboard/grupos.html
+++ b/templates/dashboard/grupos.html
@@ -36,8 +36,8 @@
                 <table id="tabla-grupo" class="table table-striped" style="width:100%">
                     <thead>
                         <tr>
-                            <th style="width: 15%;">Nombre</th>
-                            <th style="width: 10%;">Vacantes</th>
+                            <th style="width: 15%; text-align: center">Nombre</th>
+                            <th style="width: 10%; text-align: center">Vacantes</th>
                             <th style="width: 30%;">Curso</th>
                             <th>Semestre</th>
                             <th>Opciones</th>
@@ -99,8 +99,8 @@
             "info": true,
             "stateSave": true,
             "columns": [
-                { "data": "nombre" },
-                { "data": "vacantes" },
+                { "data": "nombre", "className": 'dt-body-center' },
+                { "data": "vacantes", "className": 'dt-body-center' },
                 {
                     "data": "curso",
                     "render": function (data, type, row) {
