orden de tablas

--- a/templates/dashboard/cursosxescuela.html
+++ b/templates/dashboard/cursosxescuela.html
@@ -43,10 +43,10 @@
             <table class="table" id="tabla-cursos">
                 <thead>
                     <tr>
-                        <th>Código</th>
+                        <th style="text-align:center">Código</th>
                         <th>Nombre del curso</th>
-                        <th>Ciclo</th>
-                        <th>N° Grupos</th>
+                        <th style="text-align:center">Ciclo</th>
+                        <th style="text-align:center">N° Grupos</th>
                         <th><input type="checkbox" class="form-check-input me-3 border border-dark" onclick="seleccionar_toda()" id="est"></th>
                     </tr>
                 </thead>
