--- a/templates/dashboard/cursos.html
+++ b/templates/dashboard/cursos.html
@@ -189,7 +189,7 @@
             "columns": [
                 { "data": "nombre" },
                 { "data": "cod_curso" },
-                { "data": "ciclo" },
+                { "data": "ciclo", "className": 'dt-body-center'},
                 { "data": "tipo_curso" },
                 { "data": "estado" },
                 { "data": "nombre_plan_estudio" },
