--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -134,7 +134,7 @@
 
 						<li class="sidebar-item">
 							<a class="sidebar-link" href="{{url_for('ambientesxCursos')}}">
-								<i class="align-middle" data-feather="check-square"></i> <span
+								<img data-image="" src="https://img.icons8.com/ink/48/training--v1.png" alt="training--v1"/> <span
 									class="align-middle">Ambientes por Curso</span>
 							</a>
 						</li>
@@ -151,7 +151,7 @@
 						
 						<li class="sidebar-item">
 							<a class="sidebar-link" href="{{url_for('docentesxcursos')}}">
-								<i class="align-middle" data-feather="grid"></i> <span
+								<img data-image="" src="https://img.icons8.com/metro/26/classroom.png" alt="classroom"/> <span
 									class="align-middle">Docentes por curso</span>
 							</a>
 						</li>
@@ -165,7 +165,7 @@
 
 						<li class="sidebar-item">
 							<a class="sidebar-link" href="{{url_for('horarios_por_docente')}}">
-								<i class="align-middle" data-feather="align-left"></i> <span
+								<img data-image="" src="https://img.icons8.com/ios-filled/50/planning-skill.png" alt="planning-skill"/> <span
 									class="align-middle">Horarios por docente</span>
 							</a>
 						</li>
