--- a/templates/dashboard/ambientesxcurso.html
+++ b/templates/dashboard/ambientesxcurso.html
@@ -33,9 +33,9 @@
                 <table id="tabla-cursoxambientes" class="table table-striped table-bordered tabla-cursoxambientes" style="width:100%">
                     <thead>
                         <tr>
-                            <th>Curso</th>
-                            <th>Ambiente</th>
-                            <th>Opciones</th>
+                            <th style ="text-align: center">Curso</th>
+                            <th style ="text-align: center">Ambiente</th>
+                            <th style ="text-align: center">Opciones</th>
                         </tr>
                     </thead>
                     <tbody>
