--- a/templates/dashboard/cursosxescuela.html
+++ b/templates/dashboard/cursosxescuela.html
@@ -44,7 +44,7 @@
                 <thead>
                     <tr>
                         <th style="text-align:center">Código</th>
-                        <th>Nombre del curso</th>
+                        <th style="width: 30%; text-align: center">Nombre del curso</th>
                         <th style="text-align:center">Ciclo</th>
                         <th style="text-align:center">N° Grupos</th>
                         <th><input type="checkbox" class="form-check-input me-3 border border-dark" onclick="seleccionar_toda()" id="est"></th>
