--- a/templates/dashboard/docentexcurso.html
+++ b/templates/dashboard/docentexcurso.html
@@ -33,9 +33,9 @@
                 <table id="tabla-cursoxdocentes" class="table table-striped table-bordered tabla-cursoxdocentes" style="width:100%">
                     <thead>
                         <tr>
-                            <th>Curso</th>
-                            <th>Docente</th>
-                            <th>Opciones</th>
+                            <th style ="text-align: center">Curso</th>
+                            <th style ="text-align: center">Docente</th>
+                            <th style ="text-align: center">Opciones</th>
                         </tr>
                     </thead>
                     <tbody>
