--- a/templates/dashboard/ambientes.html
+++ b/templates/dashboard/ambientes.html
@@ -41,10 +41,10 @@
                 <table id="tabla-ambiente" class="table table-striped" style="width:100%">
                     <thead>
                         <tr>
-                            <th style="width: 10%; text-align: left;">Nombre</th>
+                            <th style="width: 10%; text-align: center;">Nombre</th>
                             <th style="width: 3%; text-align: center;">Aforo</th>
                             <th style="width: 3%; text-align: center;">Estado</th>
-                            <th style="width: 10%; text-align: left;">Edificio</th>
+                            <th style="width: 10%; text-align: center;">Edificio</th>
                             <th style="width: 10%; text-align: center;">Opciones</th>
                         </tr>
                     </thead>
