--- a/templates/dashboard/grupos.html
+++ b/templates/dashboard/grupos.html
@@ -38,9 +38,9 @@
                         <tr>
                             <th style="width: 15%; text-align: center">Nombre</th>
                             <th style="width: 10%; text-align: center">Vacantes</th>
-                            <th style="width: 30%;">Curso</th>
-                            <th>Semestre</th>
-                            <th>Opciones</th>
+                            <th style="width: 30%; text-align: center">Curso</th>
+                            <th style="width: 30%; text-align: center">Semestre</th>
+                            <th style="width: 30%; text-align: center">Opciones</th>
                         </tr>
                     </thead>
                     <tbody>
